--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
+    "/js/subscribers.index.js": "/js/subscribers.index.js",
     "/css/app.css": "/css/app.css"
 }
